--- a/index.html
+++ b/index.html
@@ -5,15 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{margin: 0; padding: 0; box-sizing: border-box;}
+        #page{
+            margin: 0 auto;
+            width: 800px;
+            text-align: center;
+        }
+        header{
+            margin-top: 100px;
+        }
+        header h1{
+            font: 200px "궁서",Gungseo;
+        }
+        ul{
+            list-style: none;
+        }
+        li{
+            width: 100px;
+            height: 100px;
+            line-height: 100px;
+            border: 1px solid white;
+            margin: 100px 15px 0 15px;
+            display: block;
+            float: left;            
+        }
+        li a{
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+        .red{background-color: red;}
+        .black{background-color: crimson;}
+        .skyblue{background-color: skyblue;}
+        .yellowgreen{background-color: yellowgreen;}
+        .tomato{background-color: tomato;}
+        .lightgrey{background-color: lightgrey;}
+    </style>
+
 </head>
 <body>
-    <ul>
-        <li><a href="kim.html">김유진</a> </li>
-        <li><a href="park.html">박주현</a></li>
-        <li><a href="seok.html">석상현</a></li>
-        <li><a href="lee.html">이정식</a></li>
-        <li><a href="oh.html">오우석</a></li>
-        <li><a href="kwon.html">권태윤</a></li>
-    </ul>
+    <div id="page">
+        <header>
+            <h1>LIT</h1>
+        </header>
+        <hr>
+        <nav>
+            <ul>
+                <li class="red"><a href="./kim.html">김유진</a> </li>
+                <li class="black"><a href="./park.html">박주현</a></li>
+                <li class="tomato"><a href="./seok.html">석상현</a></li>
+                <li class="yellowgreen"><a href="./lee.html">이정식</a></li>
+                <li class="skyblue"><a href="./oh.html">오우석</a></li>
+                <li class="lightgrey"><a href="./kwon.html">권태윤</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
