--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
             font-weight: bold;
             font-size: 1.2em;
         }
-        .red{background-color: red;}
+        .blueviolet{background-color: blueviolet;}
         .black{background-color: crimson;}
-        .skyblue{background-color: skyblue;}
-        .yellowgreen{background-color: yellowgreen;}
-        .tomato{background-color: tomato;}
-        .lightgrey{background-color: lightgrey;}
+        .pink{background-color: pink;}
+        .darkgreen{background-color: darkgreen;}
+        .teal{background-color: teal;}
+        .orange{background-color: orange;}
     </style>
 
 </head>
@@ -53,12 +53,12 @@
         <hr>
         <nav>
             <ul>
-                <li class="red"><a href="./kim.html">김유진</a> </li>
+                <li class="blueviolet"><a href="./kim.html">김유진</a> </li>
                 <li class="black"><a href="./park.html">박주현</a></li>
-                <li class="tomato"><a href="./seok.html">석상현</a></li>
-                <li class="yellowgreen"><a href="./lee.html">이정식</a></li>
-                <li class="skyblue"><a href="./oh.html">오우석</a></li>
-                <li class="lightgrey"><a href="./kwon.html">권태윤</a></li>
+                <li class="teal"><a href="./seok.html">석상현</a></li>
+                <li class="darkgreen"><a href="./lee.html">이정식</a></li>
+                <li class="pink"><a href="./oh.html">오우석</a></li>
+                <li class="orange"><a href="./kwon.html">권태윤</a></li>
             </ul>
         </nav>
     </div>
