--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             border: 1px solid white;
             margin: 100px 15px 0 15px;
             display: block;
-            float: left;            
+            float: left;      
+            border-radius: 48px;      
         }
         li a{
             color: white;
